--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      <ion-icon name="body-outline"></ion-icon>
+      Personas
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-card *ngFor="let persona of personas">
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="12">
+          <h2>
+            <ion-icon name="person-circle-sharp" class="icon-tamano"></ion-icon>
+            <b>Cedula :</b>  {{persona.cedula}}
+          </h2>
+        </ion-col>
+        
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="12">
+          <h2>
+            <ion-icon name="accessibility-sharp" class="icon-tamano"></ion-icon>
+            <b>Talla :</b> {{persona.talla}}
+          </h2>
+        </ion-col>
+        
+      </ion-row>
+      
+
+      <ion-button  color="primary" (click) ="actualizar(persona.id)">
+        <ion-icon name="pencil-outline"></ion-icon> Editar
+      </ion-button>
+      
+      <ion-button  color="danger" (click) ="eliminar(persona.id)">
+        <ion-icon name="trash-outline" ></ion-icon> Eliminar
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 1 page"></app-explore-container> -->
 </ion-content>
