--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      <ion-icon name="duplicate-sharp"></ion-icon> Nuevo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-card>
+    <ion-card-content>
+       
+        <!-- Input with value -->
+        <ion-input  placeholder="Ingresar cedula" [(ngModel)]="cedula"></ion-input>
+
+        <!-- Input with value -->
+        <ion-input placeholder="Ingresar talla" [(ngModel)]="talla"></ion-input>
+
+        <ion-button expand="block" color="primary" (click)="guardar()">Guardar</ion-button>
+    </ion-card-content>
+  </ion-card>
+  
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <app-explore-container name="Tab 2 page"></app-explore-container> -->
 </ion-content>
